crates/toml_edit/tests/snapshots/invalid/string/multiline-escape-space-01.stderr
TOML parse error at line 2, column 9
  |
2 |   foo \ \n
  |         ^
invalid multi-line basic string, expected newline
